# MaxIB-Calculation-Methods-Evaluation

./: CMakeLists.txt  README.md
include/: generate_polytope.hpp  metrics.hpp  solve.hpp  solve_mosek.hpp  solve_other.hpp
src/: generate_polytope.cpp  main.cpp  metrics.cpp  solve.cpp  solve_mosek.cpp  solve_other.cpp
